<?xml version="1.0" encoding="utf-8"?>
<!--you asked me to make the recyclerView as the parent :)-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title">

            <ImageView
                android:id="@+id/iv_detail_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster"
                app:srcCompat="@drawable/intersteller" />

            <ImageView
                android:id="@+id/imageViewFavorite"
                android:layout_width="57dp"
                android:layout_height="43dp"
                android:layout_gravity="bottom|center_horizontal"
                android:contentDescription="@string/favorite"
                android:onClick="btnFavorite"
                app:layout_constraintBottom_toTopOf="@+id/iv_detail_movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/favorite_blue" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/tv_plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/interstellar_overview"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_conversion_wrapHeight="92"
            tools:layout_conversion_wrapWidth="996" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/rate"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_detail_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rateing"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            tools:layout_conversion_wrapHeight="50"
            tools:layout_conversion_wrapWidth="0" />

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/release_date"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_wrapHeight="50"
            tools:layout_conversion_wrapWidth="0" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/interstellar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_wrapHeight="71"
            tools:layout_conversion_wrapWidth="0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recyclerViewTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_recyclerViewReviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recyclerViewReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="false"
            app:layout_constraintBottom_toTopOf="@+id/rv_recyclerViewTrailers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>